# Puzzles

./: .gitignore  AppImageBuilder.yml  BUILD.md  BUILD_PLATFORMS.md  CMakeLists.txt  LICENSE  README.md  build-appimage.sh  build-macos.sh  build-windows-crosscompile.sh  build-windows-linux.sh  build-windows.bat  resources.qrc
.github/workflows/: build-releases.yml
AppDir/: .DirIcon  AppRun  puzzles.desktop
include/mazeutil/: algoutils.h
include/puzzles/: algoutils.h  bfs.h  dfs.h  kruskal.h  maze.h  maze_graph.h  prim.h  rand.h  randomSet.h  tessellate.h  wilson.h
src/: bfs.cpp  dfs.cpp  kruskal.cpp  main.cpp  main_cli.cpp  maze.cpp  maze_graph.cpp  prim.cpp  rand.cpp  tessellate.cpp  wilson.cpp
src/gui/: CrosswordGenerator.cpp  CrosswordGenerator.h  CrosswordWidget.cpp  CrosswordWidget.h  CryptogramGenerator.cpp  CryptogramGenerator.h  CryptogramWidget.cpp  CryptogramWidget.h  MazeGame.cpp  MazeGame.h  MazeWidget.cpp  MazeWidget.h  MazeWindow.cpp  MazeWindow.h  SudokuGenerator.cpp  SudokuGenerator.h  SudokuWidget.cpp  SudokuWidget.h  WordSearchGenerator.cpp  WordSearchGenerator.h  WordSearchWidget.cpp  WordSearchWidget.h  main_qt.cpp
